src/components/Widgets/Widgets.module.css
.widgetWrapper {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
}

.centerWrapper {
  position: absolute;
  width: 100%;
  height: 100%;
}

.textWrapper {
  height: 50px;
  padding: 0 10px 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  user-select: text;
  cursor: text;
}

.captionWrapper {
  width: 100%;
  max-width: 100%;
  max-height: 100%;
  overflow: scroll;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  user-select: text;
  cursor: text;
}

.text {
  background: #fff;
  font-weight: bold;
  padding: 5px;
  opacity: 0.75;
  height: min-content;
}

.shadow {
  filter: drop-shadow(0px 0px 5px #888);
}

.buttonsWrapper {
  height: 100%;
  overflow-x: hidden;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.buttonsWrapper.RTL {
  flex-direction: row-reverse;
}

/*center positions*/

.centerLeft {
  top: 50%;
  left: 0;
  transform: translate3d(0, -50%, 0);
}

.centerCenter {
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
}

.centerRight {
  top: 50%;
  right: 0;
  transform: translate3d(0, -50%, 0);
}

/*top positions*/

.topLeft {
  top: 0;
  left: 0;
}

.topCenter {
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.top {
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
}

.topRight {
  top: 0;
  right: 0;
}

/*bottom positions*/

.bottomLeft {
  bottom: 0;
  left: 0;
}

.bottomCenter {
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.bottom {
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
}

.bottomRight {
  bottom: 0;
  right: 0;
}

/*.spinner:after {*/
/*  content: '';*/
/*  display: block;*/
/*  opacity: 0.75;*/
/*  width: 34px;*/
/*  height: 34px;*/
/*  !* Math.PI * 17 * 17 ≈ 30 * 30*/
/*     the size of the spinner is about the same as the size of other icons *!*/
/*  border-radius: 50%;*/
/*  border-width: 5px 5px 0;*/
/*  border-style: solid;*/
/*  border-color: #fff transparent #fff transparent;*/
/*  animation: spin 0.25s cubic-bezier(0.5, 0.25, 0.5, 0.75) infinite;*/
/*  box-sizing: border-box;*/
/*}*/

/*@keyframes spin {*/
/*  0% {*/
/*    transform: rotate(0deg);*/
/*  }*/
/*  100% {*/
/*    transform: rotate(360deg);*/
/*  }*/
/*}*/

